fixed final contrast issues

--- a/style.css
+++ b/style.css
@@ -812,6 +812,10 @@ h4 {
     color: #f8b89b !important;
 }
 
+.tc-white-dark {
+    color: #C84D14 !important;
+}
+
 .btn-atomic-tangerine {
     background: #F3976C;
     color: #000!important;
